--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "guzzlehttp/guzzle": "~6.0",
+        "league/flysystem": "^1.1@dev",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
